Add basic title and photo info

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header class="header">
         <div class="header-content">
-            <h1 class="logo">The Daily Times</h1>
+            <h1 class="logo">The New New York Times</h1>
             <nav class="nav">
                 <a href="#">Home</a>
                 <a href="#">World</a>
@@ -26,12 +26,12 @@
     <!-- Main Article Section -->
     <main class="article-container">
         <article class="main-article">
-            <h2 class="article-title">Understanding the Impact of Climate Change on Global Weather Patterns</h2>
-            <p class="article-author">By Jane Doe | Published September 5, 2024</p>
+            <h2 class="article-title">The Death of Diamonds: How the disappearence of natural diamond's is shaking the world</h2>
+            <p class="article-author">By Layne Hunt | Published September 15, 2076</p>
 
             <div class="article-image">
-                <img src="images/ocean.jpg" alt="Image describing climate change">
-                <p class="image-caption">A visual representation of the global impact of climate change. Source: Nature Journal.</p>
+                <img src="images/mine.jpg" alt="Image describing climate change">
+                <p class="image-caption">Aikhal, which used to be the largest natural diamond mine, located in Yakutia, Russia. Source: Mining.com.</p>
             </div>
 
             <div class="article-content">
@@ -64,7 +64,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2024 The Daily Times. All rights reserved.</p>
+            <p>&copy; 2024 The New New York Times. All rights reserved.</p>
             <nav class="footer-nav">
                 <a href="#">Contact Us</a>
                 <a href="#">Privacy Policy</a>
