--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample News Article</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Main Container to Center the Title -->
+    <div>
+        <h1 id="center">The New New York Times</h1>
+    </div>
+
+    <!-- Header Section (now starts below the title) -->
     <header class="header">
-        <div class="header-content">
-            <h1 class="logo">The New New York Times</h1>
-            <nav class="nav">
-                <a href="#">Home</a>
-                <a href="#">World</a>
-                <a href="#">Politics</a>
-                <a href="#">Business</a>
-                <a href="#">Technology</a>
-                <a href="#">Culture</a>
-            </nav>
-        </div>
+        <hr class="header-separator">
+        <nav class="nav">
+            <a href="#">Home</a>
+            <a href="#">World</a>
+            <a href="#">Politics</a>
+            <a href="#">Business</a>
+            <a href="#">Technology</a>
+            <a href="#">Culture</a>
+        </nav>
     </header>
 
     <!-- Main Article Section -->
@@ -35,31 +38,35 @@
             </div>
 
             <div class="article-content">
-                <p>Climate change is having a profound impact on global weather patterns, leading to an increase in the frequency and severity of extreme weather events. Scientists warn that if greenhouse gas emissions are not significantly reduced, the consequences could be catastrophic.</p>
+                <p>[Summary] Natural Diamonds are classified as carbon that has been compressed below the Earth’s mantle for millions of years. The last known natural diamonds were mined by a marine mining vessel off the coast of Namibia on Sunday, September 15, 2176. This death comes after numerous warnings from chief climate conservation scientists.
+                </p>
 
-                <p>Recent studies show a correlation between rising global temperatures and the occurrence of hurricanes, floods, and wildfires. These events are becoming more intense and more frequent, causing widespread destruction and loss of life.</p>
+                <p>[Notable Appearances] However, diamonds are arguably most notable by their characteristic shimmer as they embellish jewelry and accessories. Their brilliance can be seen making an appearance at almost every exclusive and important event throughout history, starting in 1074 where they were present as the centerpiece of BLANK’s crown during the CORONATION. Over time, they became synonymous with luxury, wealth, and exclusivity, thrusting the mineral into the spotlight of society's rich and powerful. One of the largest diamonds ever mined includes the Cullian diamond, positioned at the top of one of the English Monarchy’s Crown Jewels, Sovereign's Sceptre with Cross.
+                </p>
 
-                <p>One of the most significant impacts of climate change is the melting of polar ice caps, which contributes to rising sea levels. This not only threatens coastal communities but also disrupts marine ecosystems, leading to the loss of biodiversity.</p>
+                <p>[Strictly Facts (Geology)] Natural diamonds hold a much longer history than humans, with most forming at least 1 billion years ago amongst temperatures up to 1300 degrees Celsius within the Earth’s mantle. In some instances, diamonds can form up to 150 miles into the mantle. It is widely known as the hardest mineral on Earth, surpassing boron. Most diamonds made their way to the surface through volcanic activity, leaving the mineral scattered throughout ancient lava tubes. 
+                </p>
 
-                <p>Governments around the world are being urged to take immediate action to reduce carbon emissions and transition to renewable energy sources. However, the response has been slow, and experts fear that time is running out to mitigate the worst effects of climate change.</p>
+                <p>[First discovery and History (humans)] Diamonds were first discovered by humans in India nearly 4,000 years ago. During this time, they were prized for their medicinal properties and did not appear in Europe until 327 BC. Over time, the folklore around the mineral increased, leading people to associate their immense strength with invincibility and Royals believed diamonds made them invincible.
+</p>
+                <p>[Economy] Historically, the diamond trade has contributed a significant amount to our economies, estimated worth being 123 billion dollars in the year 2022. As this resource became scarcer, prices skyrocketed, leading to a whopping 500 billion estimated worth in just 15 years.
+                </p>
 
-                <p>The challenges posed by climate change are immense, but with concerted global efforts, it is possible to create a more sustainable future. It is imperative that individuals, communities, and nations work together to address this pressing issue.</p>
-
-                <p><em>Read more on this topic in our in-depth series on the environmental and economic impacts of climate change.</em></p>
+                <p>[lab diamonds] The rivalry between lab and natural diamonds has maintained a healthy fire since the first lab created diamond in 1954 by GE. However, the first gem-quality crystals were created a few decades later in 1971. For much of their history, lab diamonds have been viewed as an imitation of their natural counterparts. Due to recent technological advances that make it easier than ever to create such gems, lab diamond’s value has dramatically plummeted, contrasting the seemingly infinite increase natural diamonds are enjoying since this announcement. </p>
+                <p>[Anecdote]</p>
             </div>
         </article>
-
-        <!-- Related Articles Section -->
-        <aside class="related-articles">
-            <h3>Related Articles</h3>
-            <ul>
-                <li><a href="#">How Renewable Energy Can Help Combat Climate Change</a></li>
-                <li><a href="#">The Economic Costs of Global Warming</a></li>
-                <li><a href="#">Rising Sea Levels: What Coastal Cities Can Do to Prepare</a></li>
-                <li><a href="#">The Role of Technology in Addressing Climate Change</a></li>
-            </ul>
-        </aside>
     </main>
+
+    <aside class="related-articles">
+        <h3>Related Articles</h3>
+        <ul>
+            <li><a href="#">How Renewable Energy Can Help Combat Climate Change</a></li>
+            <li><a href="#">The Economic Costs of Global Warming</a></li>
+            <li><a href="#">Rising Sea Levels: What Coastal Cities Can Do to Prepare</a></li>
+            <li><a href="#">The Role of Technology in Addressing Climate Change</a></li>
+        </ul>
+    </aside>
 
     <!-- Footer Section -->
     <footer class="footer">
