update info, add JK page

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample News Article</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
 
     <!-- Main Container to Center the Title -->
@@ -29,31 +31,91 @@
     <!-- Main Article Section -->
     <main class="article-container">
         <article class="main-article">
-            <h2 class="article-title">The Death of Diamonds: How the disappearence of natural diamond's is shaking the world</h2>
-            <p class="article-author">By Layne Hunt | Published September 15, 2076</p>
+            <h2 class="article-title">The Death of the Natural Diamond; How This Disappearance is Shaking the World
+            </h2>
+            <p class="article-author">The last natural diamond was mined from the Earth's surface, what events led up to
+                this moment and what does it mean for our environment.</p>
 
             <div class="article-image">
                 <img src="images/mine.jpg" alt="Image describing climate change">
-                <p class="image-caption">Aikhal, which used to be the largest natural diamond mine, located in Yakutia, Russia. Source: Mining.com.</p>
+                <p class="image-caption">Aikhal, which used to be the largest natural diamond mine, located in Yakutia,
+                    Russia. Source: Mining.com.</p>
             </div>
 
+            <p class="article-author">By Layne Hunt | Published September 15, 2076</p>
+
             <div class="article-content">
-                <p>[Summary] Natural Diamonds are classified as carbon that has been compressed below the Earth’s mantle for millions of years. The last known natural diamonds were mined by a marine mining vessel off the coast of Namibia on Sunday, September 15, 2176. This death comes after numerous warnings from chief climate conservation scientists.
+                <p>Natural Diamonds are classified as carbon that has been compressed below the Earth’s mantle for
+                    millions of years. The last known natural diamonds were mined by a marine mining vessel off the
+                    coast of Namibia on Sunday, September 15, 2176. This event, though inevitable, came as a somber
+                    reminder after countless warnings from climate conservation scientists who cautioned that the days
+                    of mining these rare gems were numbered.
                 </p>
 
-                <p>[Notable Appearances] However, diamonds are arguably most notable by their characteristic shimmer as they embellish jewelry and accessories. Their brilliance can be seen making an appearance at almost every exclusive and important event throughout history, starting in 1074 where they were present as the centerpiece of BLANK’s crown during the CORONATION. Over time, they became synonymous with luxury, wealth, and exclusivity, thrusting the mineral into the spotlight of society's rich and powerful. One of the largest diamonds ever mined includes the Cullian diamond, positioned at the top of one of the English Monarchy’s Crown Jewels, Sovereign's Sceptre with Cross.
+                <p>For centuries, natural diamonds dazzled and mesmerized the masses. Their iconic sparkle graces the
+                    jewelry and crowns of the elite while bringing love to millions through the popularization of
+                    engagement rings. The stone can be seen making an appearance at almost every exclusive and important
+                    event throughout history, appearing in Europe as early as 1074 when they adorned a Hungarian queen’s
+                    crown. Over time, they became synonymous with luxury, wealth, and exclusivity, thrusting the mineral
+                    into the spotlight of society's rich and powerful. Some notable diamonds of the past include the
+                    Hope Diamond, known for its rumored curse, The Cullian diamond located at the helm of the
+                    Sovereign's Scepter with Cross, and the Koh-i-Noor, said to be a gift from the gods. Transcending
+                    the physical, diamonds ingrained themselves into pop culture through many different types of media
+                    including medieval paintings, song, and video content. One instance of this includes the song
+                    “Diamonds are a girl's best friend” sung by Marylin Monroee in 1954.
                 </p>
 
-                <p>[Strictly Facts (Geology)] Natural diamonds hold a much longer history than humans, with most forming at least 1 billion years ago amongst temperatures up to 1300 degrees Celsius within the Earth’s mantle. In some instances, diamonds can form up to 150 miles into the mantle. It is widely known as the hardest mineral on Earth, surpassing boron. Most diamonds made their way to the surface through volcanic activity, leaving the mineral scattered throughout ancient lava tubes. 
+                <p>Natural diamonds hold a much longer history than humans, with most forming at least 1 billion years
+                    ago amongst temperatures up to 1300 degrees Celsius within the Earth’s mantle. In some instances,
+                    diamonds can form up to 150 miles into the mantle. It is widely known as the hardest mineral on
+                    Earth, even surpassing steel. Most diamonds made their way to the surface through volcanic activity,
+                    leaving the mineral scattered throughout ancient lava tubes.
                 </p>
 
-                <p>[First discovery and History (humans)] Diamonds were first discovered by humans in India nearly 4,000 years ago. During this time, they were prized for their medicinal properties and did not appear in Europe until 327 BC. Over time, the folklore around the mineral increased, leading people to associate their immense strength with invincibility and Royals believed diamonds made them invincible.
-</p>
-                <p>[Economy] Historically, the diamond trade has contributed a significant amount to our economies, estimated worth being 123 billion dollars in the year 2022. As this resource became scarcer, prices skyrocketed, leading to a whopping 500 billion estimated worth in just 15 years.
+                <p>Diamonds were first discovered by humans in India nearly 4,000 years ago. During this time, they were
+                    prized for their medicinal properties and did not appear in Europe until 327 BC.Yet diamonds were
+                    never merely ornamental. Throughout history, radiance and strength warped into an underlying
+                    perception of luxury and invincibility. Royals in Europe believed diamonds made them invincible,
+                    associating the gem’s indestructibility with their own rule. For millennia, diamonds have been
+                    endowed with myths and folklore, imbuing them with cultural and symbolic power.
+                </p>
+                <p>Historically, the diamond trade has contributed significantly to our economies, becoming a pivotal
+                    source of revenue for previously war-torn countries with greater access to this resource. In 2001,
+                    it was reported that the Diamond and Jewelry business generated an annual 24.1 billion in economic
+                    value. As these natural diamonds became less common, this estimate increased to a staggering <a
+                        href="just_kidding.html">120 billion</a> in global exports in the year 2095. Natural diamonds,
+                    once abundant enough to be traded freely, were elevated to near-mythical status as their
+                    availability waned. We as a species have internalized this scarcity and internalized it as value,
+                    leading to this ballooning of price, an increase in underground trading activity, and a rise in
+                    overall criminal activity associated with the stone.
                 </p>
 
-                <p>[lab diamonds] The rivalry between lab and natural diamonds has maintained a healthy fire since the first lab created diamond in 1954 by GE. However, the first gem-quality crystals were created a few decades later in 1971. For much of their history, lab diamonds have been viewed as an imitation of their natural counterparts. Due to recent technological advances that make it easier than ever to create such gems, lab diamond’s value has dramatically plummeted, contrasting the seemingly infinite increase natural diamonds are enjoying since this announcement. </p>
-                <p>[Anecdote]</p>
+                <p>A likely motivator for such growth is the carefully crafted relationship between diamonds and love.
+                    The first documented proposal using a diamond engagement ring was in 1477 when Archduke Maximilian
+                    of Austria asked Mary of Burgundy to be his wife. Thus, a new precedent was set and began to spread
+                    throughout the upper classes of Europe. This tie to love and romance developed further during the
+                    mid 20th century when the company De Beers released the slogan “A Diamond is forever”. This slogan,
+                    along with other clever marketing tactics, transformed the stone into a staple of the loving
+                    relationship and greatly contributed to their rise in popularity.
+                </p>
+
+                <p>Tangentially, the contention between lab and natural diamonds maintained a steady pace, beginning
+                    with the first lab created diamonds in 1954 by General Energy. During these early years, lab
+                    diamonds were considered imitations of their natural counterparts. However, the creation of the
+                    first gem-quality lab diamond in 1971 marked a turning point in history and opened up the public to
+                    lab diamonds as a true substitute for natural diamonds.In recent years, <a
+                        href="just_kidding.html">technological advances </a>have
+                    made it easier than ever to create such gems, increasing their distribution. This has
+                    unintentionally caused their monetary value to plummet, contrasting the seemingly infinite increase
+                    natural diamonds are enjoying since this announcement.
+                </p>
+
+                <p>A gem of the Earth, born in fire and miraculously traveling towards the surface, only to be exploited
+                    to the point of extinction by humans. Just as we as a species have consumed without regard for our
+                    environment, we depleted and destroyed something we held with such value. Looking toward the future,
+                    we can only hope to protect our environment from further destruction, though the loss of the natural
+                    diamonds may only be the beginning.
+                </p>
             </div>
         </article>
     </main>
@@ -81,4 +143,5 @@
     </footer>
 
 </body>
+
 </html>
