Add font, add scepter

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
             <p class="article-author">By Layne Hunt | Published September 15, 2076</p>
 
-            <div class="article-content">
+            <div class="article-content" style="font: Georgia;">
                 <p>Natural Diamonds are classified as carbon that has been compressed below the Earth’s mantle for
                     millions of years. The last known natural diamonds were mined by a marine mining vessel off the
                     coast of Namibia on Sunday, September 15, 2176. This event, though inevitable, came as a somber
@@ -64,6 +64,11 @@
                     including medieval paintings, song, and video content. One instance of this includes the song
                     “Diamonds are a girl's best friend” sung by Marylin Monroee in 1954.
                 </p>
+
+                <div class="article-image">
+                    <img src="images/scepter.jpg" alt="Image of the Scepter of the Cross">
+                    <p class="image-caption">Image of the Scepter of the Cross which contains the Cullian 2 diamond. Source: <a href="https://www.hrp.org.uk/tower-of-london/history-and-stories/the-crown-jewels/#gs.etsniv"> Historic Royal Palaces</a></p>
+                </div>
 
                 <p>Natural diamonds hold a much longer history than humans, with most forming at least 1 billion years
                     ago amongst temperatures up to 1300 degrees Celsius within the Earth’s mantle. In some instances,
