--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample News Article</title>
+    <title>New New York Times</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 
@@ -67,7 +67,7 @@
 
                 <div class="article-image">
                     <img src="images/scepter.jpg" alt="Image of the Scepter of the Cross">
-                    <p class="image-caption">Image of the Scepter of the Cross which contains the Cullian 2 diamond. Source: <a href="https://www.hrp.org.uk/tower-of-london/history-and-stories/the-crown-jewels/#gs.etsniv"> Historic Royal Palaces</a></p>
+                    <p class="image-caption" style="font-size: 14px;">Image of the Scepter of the Cross which contains the Cullian 2 diamond. Source: <a href="https://www.hrp.org.uk/tower-of-london/history-and-stories/the-crown-jewels/#gs.etsniv"> Historic Royal Palaces</a></p>
                 </div>
 
                 <p>Natural diamonds hold a much longer history than humans, with most forming at least 1 billion years
