--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
             <p class="article-title-sub">The last natural diamond was mined from the Earth's surface, what events led up to
                 this moment and what does it mean for our environment.</p>
 
+            <hr style="width: 80%; opacity: 40%;">
+
             <div class="article-image">
                 <img src="images/mine.jpg" alt="Image describing climate change">
                 <p class="image-caption">Aikhal, which used to be the largest natural diamond mine, located in Yakutia,
@@ -45,7 +47,7 @@
             <div class="author-profile">
                 <div class="author-profile-sub">
                     <img class="profile-photo" src="images/author.jpg" alt="Author photo">
-                    <p><b>By Layne Hunt</b></p>
+                    <p style="font-family: 'Georgia', sans-serif;"><b>By <u>Layne Hunt</u></b></p>
                 </div>
                 <p class="article-author">September 15, 2176</p>
             </div>
