--- a/public/just_kidding.html
+++ b/public/just_kidding.html
@@ -8,7 +8,7 @@
         /* General styles */
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f0f8ff; /* Light blue background */
+            background-color: #fff8f0; /* Light blue background */
             color: #333; /* Darker text for readability */
             margin: 0;
             padding: 0;
@@ -26,12 +26,12 @@
             max-width: 500px;
             padding: 20px;
             text-align: center;
-            border-top: 8px solid #ff6f61; /* Chic complementary coral color */
+            border-top: 8px solid #b18c9e; /* Chic complementary coral color */
         }
 
         /* Title */
         h1 {
-            color: #007acc; /* Complementary deeper blue */
+            color: #b18c9e; /* Complementary deeper blue */
             font-size: 28px;
             margin-bottom: 20px;
         }
@@ -48,7 +48,7 @@
             display: inline-block;
             margin: 10px;
             padding: 12px 24px;
-            background-color: #ff6f61; /* Coral button */
+            background-color: #b18c9e; /* Coral button */
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -57,7 +57,7 @@
         }
 
         .button:hover {
-            background-color: #ff867c; /* Lighter coral on hover */
+            background-color: #d499b5; /* Lighter coral on hover */
         }
 
         /* Subtle footer */
