make title black

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <!-- Main Container to Center the Title -->
     <div>
-        <h1 id="center"><a href="https://www.nytimes.com/" style="text-decoration: none;">New New York Times</a></h1>
+        <h1 id="center"><a href="https://www.nytimes.com/" style="text-decoration: none; color: black;">New New York Times</a></h1>
     </div>
 
     <!-- Header Section (now starts below the title) -->
