--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 
     <!-- Main Container for the Title -->
     <div class="title-container">
-        <h1 id="center"><a href="https://www.nytimes.com/" style="text-decoration: none; color: black;">The New New York Times</a></h1>
+        <h1 id="center"><a href="https://www.nytimes.com/" style="text-decoration: none; color: black;">The New New York
+                Times</a></h1>
     </div>
 
     <!-- Header Section with Fixed Navbar -->
@@ -56,15 +57,17 @@
         <article class="main-article">
             <h2 class="article-title">The Death of the Natural Diamond; How This Disappearance is Shaking the World
             </h2>
-            <p class="article-title-sub">The last natural diamond was mined from the Earth's surface, what events led up to
+            <p class="article-title-sub">The last natural diamond was mined from the Earth's surface, what events led up
+                to
                 this moment and what does it mean for our environment.</p>
 
             <hr style="width: 80%; opacity: 40%;">
 
             <div class="article-image">
-                <img src="images/mine.jpg" alt="Image describing climate change">
-                <p class="image-caption">Aikhal, which used to be the largest natural diamond mine, located in Yakutia,
-                    Russia. Source: Mining.com.</p>
+                <img src="images/mine.jpg" alt="Image showing diamond">
+                <p class="image-caption">Jewler examining diamond, Source: Dillon Wanner, <a
+                        href="https://unsplash.com/photos/a-person-using-a-touchscreen-device-ayp0K7cAP68">unsplash.com</a>
+                </p>
             </div>
 
             <div class="author-profile">
@@ -76,7 +79,7 @@
             </div>
 
             <div class="article-content" style="font: Georgia;">
-                <p>Natural Diamonds are classified as carbon that has been compressed below the Earth’s mantle for
+                <p>Natural diamonds are classified as carbon that has been compressed below the Earth’s mantle for
                     millions of years. The last known natural diamonds were mined by a marine mining vessel off the
                     coast of Namibia on Sunday, September 15, 2176. This event, though inevitable, came as a somber
                     reminder after countless warnings from climate conservation scientists who cautioned that the days
@@ -118,14 +121,14 @@
                 <p>Diamonds were <a href="https://www.naturaldiamonds.com/real/the-diamond-story/">first discovered by
                         humans in India nearly 4,000 years ago</a>. During this time, they were
                     prized for their medicinal properties and did not appear in Europe until 327 BC. Throughout history,
-                    radiance and strength warped into an underlying perception of luxury and invincibility. Royals in
-                    Europe believed diamonds made them invincible, associating the gem's indestructibility with their
+                    radiance and strength warped into an underlying perception of luxury and invincibility. European
+                    royals believed diamonds made them invincible, associating the gem's indestructibility with their
                     own rule. For millennia, diamonds have been endowed with myths and folklore, imbuing them with
                     cultural and symbolic power. </p>
 
                 <p> Historically, the diamond trade has contributed significantly to our economies, becoming a pivotal
                     source of revenue for previously war-torn countries with greater access to this resource. Despite
-                    these economic contributions, diamond mining is known to have significant environmental impacts
+                    these economic contributions, diamond mining is known to have significant environmental impacts,
                     including habitat destruction, water pollution, and carbon emissions. Furthermore, the mining
                     industry is a notoriously bad working environment, with some workers getting paid merely 1 dollar a
                     day. In 2001, it was reported that the <a
@@ -147,7 +150,7 @@
                         of Austria asked Mary of Burgundy to be his wife</a>. Thus, a new precedent was set and began to
                     spread
                     throughout the upper classes of Europe. This tie to love and romance developed further during the
-                    mid 20th century when the company De Beers released the slogan “A Diamond is forever,” This slogan,
+                    mid 20th century when the company De Beers released the slogan “A Diamond is Forever,” This slogan,
                     along with other clever marketing tactics, transformed the stone into a staple of the loving
                     relationship and greatly contributed to their rise in popularity.
                 </p>
@@ -160,7 +163,7 @@
                     first gem-quality lab diamond in 1971 marked a turning point in history and opened the public to lab
                     diamonds as a true substitute for natural diamonds. In recent years, <a
                         href="just_kidding.html">technological advances have
-                        made it easier than ever to create such gems </a>, increasing their distribution. This has
+                        made it easier than ever to create such gems</a>, increasing their distribution. This has
                     unintentionally caused their monetary value to plummet, contrasting the seemingly infinite increase
                     natural diamonds are enjoying since this announcement. Beyond their increasing affordability, lab
                     diamonds have a significantly lower carbon footprint and little to no ecological impact. As natural
@@ -178,7 +181,7 @@
                 <p>A gem of the Earth, born in fire and miraculously traveling towards the surface, only to be exploited
                     to the point of extinction by humans. Just as we as a species have consumed without regard for our
                     environment, we depleted and destroyed something we held with such value. Looking toward the future,
-                    we can only hope to protect our environment from further destruction, though the loss of the natural
+                    we can only hope to protect our environment from further destruction, though the loss of  natural
                     diamonds may only be the beginning.
                 </p>
             </div>
